--- a/assets/css/download_style.css
+++ b/assets/css/download_style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700|Poppins:300,400,800&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700|Poppins:300,400,500,600,700,800&display=swap");
 *,
 *::before,
 *::after {
@@ -172,6 +172,312 @@ header section.main ul li {
   list-style-type: none;
 }
 
+section.main {
+  -webkit-transition: background 0.5s;
+  transition: background 0.5s;
+}
+
+section.main .container {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section.main .container .title {
+  -webkit-animation: fadeInUp 0.8s;
+          animation: fadeInUp 0.8s;
+  margin-top: -60vh;
+}
+
+section.main .container .title .texts {
+  height: 90px;
+  overflow: hidden;
+}
+
+section.main .container .title .texts .list {
+  list-style-type: none;
+}
+
+section.main .container .title .texts .list .text {
+  display: block;
+  font-weight: 700;
+  font-size: 65px;
+  color: #3f3f3f;
+  -webkit-animation: spin_words 6s normal both;
+          animation: spin_words 6s normal both;
+  -webkit-animation-delay: 1.3s;
+          animation-delay: 1.3s;
+}
+
+section.main .container .title .texts .list .text .FPS,
+section.main .container .title .texts .list .text .lag,
+section.main .container .title .texts .list .text .network {
+  color: #fd5f5f;
+}
+
+section.main .container .wrapper {
+  margin-top: -100px;
+  display: block;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+section.main .container .wrapper .button {
+  opacity: 0;
+  -webkit-animation: fadeInUp 0.8s forwards;
+          animation: fadeInUp 0.8s forwards;
+  -webkit-animation-delay: 5s;
+          animation-delay: 5s;
+  padding: 0.75em 2em;
+  text-align: center;
+  text-decoration: none;
+  color: #fd5f5f;
+  border: 2px solid #fd5f5f;
+  font-size: 24px;
+  display: inline-block;
+  border-radius: 0.6em;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
+}
+
+section.main .container .wrapper .button:before {
+  content: "";
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
+  width: 3em;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: -4.5em;
+  -webkit-transform: skewX(-45deg) translateX(0);
+          transform: skewX(-45deg) translateX(0);
+  -webkit-transition: none;
+  transition: none;
+}
+
+section.main .container .wrapper .button:hover {
+  background-color: #fd5f5f;
+  color: #fff;
+  border-bottom: 4px solid #fc2d2d;
+}
+
+section.main .container .wrapper .button:hover:before {
+  -webkit-transform: skewX(-45deg) translateX(16.5em);
+          transform: skewX(-45deg) translateX(16.5em);
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+section.main .container .modal-open {
+  cursor: pointer;
+  opacity: 0;
+  -webkit-animation: fadeInUp 0.8s forwards;
+          animation: fadeInUp 0.8s forwards;
+  -webkit-animation-delay: 6s;
+          animation-delay: 6s;
+  font-family: sans-serif;
+  position: absolute;
+  padding: 10px 0;
+  font-size: 15px;
+  font-weight: 300;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #3f3f3f;
+  border: 0;
+  outline: none;
+  background-color: transparent;
+}
+
+section.main .container .modal-open:before, section.main .container .modal-open:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 2px;
+  -webkit-transition: width 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: width 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+section.main .container .modal-open:before {
+  width: 100%;
+  background-color: #9d9d9d;
+}
+
+section.main .container .modal-open:after {
+  width: 0;
+  background-color: #505050;
+}
+
+section.main .container .modal-open:hover:after {
+  width: calc(100% + 1px);
+}
+
+section.main .container .modal-box {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  position: absolute;
+  overflow: hidden;
+  width: 0;
+  margin-top: 1px;
+  height: 2px;
+  color: #fff;
+  background-color: #505050;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-transition: width 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), left 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), height 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), top 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: width 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), left 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), height 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), top 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+section.main .container .modal-box.is-open {
+  -webkit-transition: width 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), left 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), height 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), top 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: width 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), left 400ms 0ms cubic-bezier(0.165, 0.84, 0.44, 1), height 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1), top 400ms 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+section.main .container .modal-box.is-open li {
+  opacity: 1;
+}
+
+section.main .container .modal-box.is-open .modal-close {
+  opacity: 1;
+  -webkit-transition: all 500ms 700ms;
+  transition: all 500ms 700ms;
+}
+
+section.main .container .modal-box ul {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  padding: 30px;
+  list-style-type: none;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+section.main .container .modal-box li {
+  position: relative;
+  margin: 20px 0;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
+}
+
+section.main .container .modal-box a {
+  position: relative;
+  font-weight: 300;
+  text-decoration: none;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+section.main .container .modal-box a:before, section.main .container .modal-box a:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  height: 2px;
+  -webkit-transition: width 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: width 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+section.main .container .modal-box a:after {
+  width: 0;
+  background-color: #fff;
+}
+
+section.main .container .modal-box a:hover:after {
+  width: 100%;
+}
+
+section.main .container .modal-box.is-open li:nth-child(1) {
+  -webkit-transition: all 500ms 575ms;
+  transition: all 500ms 575ms;
+}
+
+section.main .container .modal-box.is-open li:nth-child(2) {
+  -webkit-transition: all 500ms 650ms;
+  transition: all 500ms 650ms;
+}
+
+section.main .container .modal-box.is-open li:nth-child(3) {
+  -webkit-transition: all 500ms 725ms;
+  transition: all 500ms 725ms;
+}
+
+section.main .container .modal-box.is-open li:nth-child(4) {
+  -webkit-transition: all 500ms 800ms;
+  transition: all 500ms 800ms;
+}
+
+section.main .container .modal-box.is-open li:nth-child(5) {
+  -webkit-transition: all 500ms 875ms;
+  transition: all 500ms 875ms;
+}
+
+section.main .container .modal-close {
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 15px;
+  height: 15px;
+  padding: 0;
+  border: 0;
+  outline: none;
+  opacity: 0;
+  background-color: transparent;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+section.main .container .modal-close:before, section.main .container .modal-close:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 15px;
+  height: 3px;
+  background-color: #fff;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+section.main .container .modal-close:after {
+  width: 3px;
+  height: 15px;
+}
+
+section.main .container .visuallyhidden {
+  position: absolute;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+}
+
 section.dark {
   background: #2f2f2f;
   color: #a0a0a0;
@@ -192,5 +498,121 @@ section.dark .header_links ul li .tooltip2,
 section.dark .header_links ul li .tooltip3 {
   color: #a0a0a0;
   background: #202020;
+}
+
+section.dark .container .title .texts .list .text {
+  color: #fff;
+}
+
+section.dark .container .modal-open {
+  color: #a0a0a0;
+}
+
+section.dark .container .modal-box {
+  background-color: #202020;
+}
+
+@-webkit-keyframes fadeInUp {
+  from {
+    -webkit-transform: translate3d(0, 150px, 0);
+            transform: translate3d(0, 150px, 0);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    -webkit-transform: translate3d(0, 150px, 0);
+            transform: translate3d(0, 150px, 0);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeInDown {
+  from {
+    -webkit-transform: translate3d(0, -150px, 0);
+            transform: translate3d(0, -150px, 0);
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {
+  from {
+    -webkit-transform: translate3d(0, -150px, 0);
+            transform: translate3d(0, -150px, 0);
+  }
+  to {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes spin_words {
+  10% {
+    -webkit-transform: translateY(-112%);
+            transform: translateY(-112%);
+  }
+  25% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  35% {
+    -webkit-transform: translateY(-212%);
+            transform: translateY(-212%);
+  }
+  50% {
+    -webkit-transform: translateY(-200%);
+            transform: translateY(-200%);
+  }
+  60% {
+    -webkit-transform: translateY(-312%);
+            transform: translateY(-312%);
+  }
+  100% {
+    -webkit-transform: translateY(-300%);
+            transform: translateY(-300%);
+  }
+}
+
+@keyframes spin_words {
+  10% {
+    -webkit-transform: translateY(-112%);
+            transform: translateY(-112%);
+  }
+  25% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  35% {
+    -webkit-transform: translateY(-212%);
+            transform: translateY(-212%);
+  }
+  50% {
+    -webkit-transform: translateY(-200%);
+            transform: translateY(-200%);
+  }
+  60% {
+    -webkit-transform: translateY(-312%);
+            transform: translateY(-312%);
+  }
+  100% {
+    -webkit-transform: translateY(-300%);
+            transform: translateY(-300%);
+  }
 }
 /*# sourceMappingURL=download_style.css.map */
