--- a/assets/css/download_style.scss
+++ b/assets/css/download_style.scss
@@ -1,4 +1,10 @@
-@import url("https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700|Poppins:300,400,800&display=swap");
+$black-background-color: #202020;
+$main-color: #fd5f5f;
+$ease: cubic-bezier(0.165, 0.84, 0.44, 1);
+$highlight-color: #505050;
+
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700|Poppins:300,400,500,600,700,800&display=swap");
+
 *,
 *::before,
 *::after {
@@ -9,27 +15,27 @@
 }
 
 ::selection {
-  background-color: #fd5f5f;
+  background-color: $main-color;
   color: #fff;
 }
 
 ::-moz-selection {
-  background-color: #fd5f5f;
+  background-color: $main-color;
   color: #fff;
 }
 
 ::-o-selection {
-  background-color: #fd5f5f;
+  background-color: $main-color;
   color: #fff;
 }
 
 ::-ms-selection {
-  background-color: #fd5f5f;
+  background-color: $main-color;
   color: #fff;
 }
 
 ::-webkit-selection {
-  background-color: #fd5f5f;
+  background-color: $main-color;
   color: #fff;
 }
 
@@ -139,6 +145,245 @@ header {
   }
 }
 
+section.main {
+  transition: background 0.5s;
+  .container {
+    height: 100vh;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+
+    .title {
+      animation: fadeInUp 0.8s;
+      margin-top: -60vh;
+
+      .texts {
+        height: 90px;
+        overflow: hidden;
+
+        .list {
+          list-style-type: none;
+
+          .text {
+            display: block;
+            font-weight: 700;
+            font-size: 65px;
+            color: #3f3f3f;
+            animation: spin_words 6s normal both;
+            animation-delay: 1.3s;
+
+            .FPS,
+            .lag,
+            .network {
+              color: $main-color;
+            }
+          }
+        }
+      }
+    }
+
+    .wrapper {
+      margin-top: -100px;
+      display: block;
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, -50%);
+
+      .button {
+        opacity: 0;
+        animation: fadeInUp 0.8s forwards;
+        animation-delay: 5s;
+        padding: 0.75em 2em;
+        text-align: center;
+        text-decoration: none;
+        color: $main-color;
+        border: 2px solid $main-color;
+        font-size: 24px;
+        display: inline-block;
+        border-radius: 0.6em;
+        transition: all 0.2s ease-in-out;
+        position: relative;
+        overflow: hidden;
+
+        &:before {
+          content: "";
+          background-color: rgba(255, 255, 255, 0.5);
+          height: 100%;
+          width: 3em;
+          display: block;
+          position: absolute;
+          top: 0;
+          left: -4.5em;
+          transform: skewX(-45deg) translateX(0);
+          transition: none;
+        }
+
+        &:hover {
+          background-color: $main-color;
+          color: #fff;
+          border-bottom: 4px solid darken(#fd5f5f, 10%);
+          &:before {
+            transform: skewX(-45deg) translateX(16.5em);
+            transition: all 0.5s ease-in-out;
+          }
+        }
+      }
+    }
+
+    .modal-open {
+      cursor: pointer;
+      opacity: 0;
+      animation: fadeInUp 0.8s forwards;
+      animation-delay: 6s;
+      font-family: sans-serif;
+      position: absolute;
+      padding: 10px 0;
+      font-size: 15px;
+      font-weight: 300;
+      letter-spacing: 3px;
+      text-transform: uppercase;
+      color: #3f3f3f;
+      border: 0;
+      outline: none;
+      background-color: transparent;
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 0;
+        height: 2px;
+        transition: width 400ms $ease;
+      }
+      &:before {
+        width: 100%;
+        background-color: lighten($highlight-color, 30%);
+      }
+      &:after {
+        width: 0;
+        background-color: $highlight-color;
+      }
+      &:hover:after {
+        width: calc(100% + 1px);
+      }
+    }
+
+    .modal-box {
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: absolute;
+      overflow: hidden;
+      width: 0;
+      margin-top: 1px;
+      height: 2px;
+      color: #fff;
+      background-color: $highlight-color;
+      transform: translate(-50%, -50%);
+      transition: width 400ms 400ms $ease, left 400ms 400ms $ease,
+        height 400ms 0ms $ease, top 400ms 0ms $ease;
+      &.is-open {
+        transition: width 400ms 0ms $ease, left 400ms 0ms $ease,
+          height 400ms 400ms $ease, top 400ms 400ms $ease;
+        li {
+          opacity: 1;
+        }
+        .modal-close {
+          opacity: 1;
+          transition: all 500ms 700ms;
+        }
+      }
+      ul {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: 0;
+        padding: 30px;
+        list-style-type: none;
+        transform: translate(-50%, -50%);
+      }
+      li {
+        position: relative;
+        margin: 20px 0;
+        text-align: center;
+        opacity: 0;
+        transition: all 200ms;
+      }
+      a {
+        position: relative;
+        font-weight: 300;
+        text-decoration: none;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        color: #fff;
+        &:before,
+        &:after {
+          content: "";
+          position: absolute;
+          top: 100%;
+          left: 0;
+          height: 2px;
+          transition: width 400ms $ease;
+        }
+        &:after {
+          width: 0;
+          background-color: #fff;
+        }
+        &:hover:after {
+          width: 100%;
+        }
+      }
+      @for $i from 1 through 5 {
+        &.is-open li:nth-child(#{$i}) {
+          transition: all 500ms 500ms + (75ms * $i);
+        }
+      }
+    }
+
+    .modal-close {
+      cursor: pointer;
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      width: 15px;
+      height: 15px;
+      padding: 0;
+      border: 0;
+      outline: none;
+      opacity: 0;
+      background-color: transparent;
+      transform: rotate(-45deg);
+      &:before,
+      &:after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        width: 15px;
+        height: 3px;
+        background-color: #fff;
+        transform: translate(-50%, -50%);
+      }
+      &:after {
+        width: 3px;
+        height: 15px;
+      }
+    }
+
+    .visuallyhidden {
+      position: absolute;
+      overflow: hidden;
+      clip: rect(0 0 0 0);
+      width: 1px;
+      height: 1px;
+      margin: -1px;
+      padding: 0;
+      border: 0;
+    }
+  }
+}
 section.dark {
   background: #2f2f2f;
   color: #a0a0a0;
@@ -162,6 +407,66 @@ section.dark {
   .header_links ul li .tooltip2,
   .header_links ul li .tooltip3 {
     color: #a0a0a0;
-    background: #202020;
+    background: $black-background-color;
+  }
+
+  .container {
+    .title {
+      .texts {
+        .list {
+          .text {
+            color: #fff;
+          }
+        }
+      }
+    }
+
+    .modal-open {
+      color: #a0a0a0;
+    }
+
+    .modal-box {
+      background-color: $black-background-color;
+    }
+  }
+}
+@keyframes fadeInUp {
+  from {
+    transform: translate3d(0, 150px, 0);
+    opacity: 0;
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+
+@keyframes fadeInDown {
+  from {
+    transform: translate3d(0, -150px, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+@keyframes spin_words {
+  10% {
+    transform: translateY(-112%);
+  }
+  25% {
+    transform: translateY(-100%);
+  }
+  35% {
+    transform: translateY(-212%);
+  }
+  50% {
+    transform: translateY(-200%);
+  }
+  60% {
+    transform: translateY(-312%);
+  }
+  100% {
+    transform: translateY(-300%);
   }
 }
