--- a/assets/css/download_style.scss
+++ b/assets/css/download_style.scss
@@ -105,44 +105,61 @@ header {
       text-align: center;
       justify-content: center;
       align-items: center;
-      border-radius: 6px;
       line-height: 35px;
       color: #2f2f2f;
-      background: #9e9e9e;
       box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
       transition: all 0.5s ease;
       opacity: 0;
       pointer-events: none;
-    }
 
-    .header_links ul li:hover .tooltip1,
-    .header_links ul li:hover .tooltip2,
-    .header_links ul li:hover .tooltip3 {
-      transition: all 0.5s ease;
-      opacity: 1;
-      top: 7%;
-    }
-
-    .toggle {
-      position: absolute;
-      top: 20px;
-      right: 20px;
-      width: 28px;
-      height: 28px;
-      border-radius: 40%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      margin-top: 15px;
-      margin-right: 30px;
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        height: 2px;
+        width: 0;
+        background-color: $main-color;
+        transition: 0.8s $ease;
+      }
     }
   }
 
-  .header_links ul li,
-  section.main ul li {
-    list-style-type: none;
+  .header_links ul li:hover .tooltip1,
+  .header_links ul li:hover .tooltip2,
+  .header_links ul li:hover .tooltip3 {
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 6%;
   }
+
+  .header_links ul li:hover .tooltip1::after,
+  .header_links ul li:hover .tooltip2::after,
+  .header_links ul li:hover .tooltip3::after {
+    left: 0;
+    width: 100%;
+  }
+
+  .toggle {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 28px;
+    height: 28px;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-right: 30px;
+  }
+}
+
+.header_links ul li,
+section.main ul li {
+  list-style-type: none;
 }
 
 section.main {
@@ -156,7 +173,7 @@ section.main {
 
     .title {
       animation: fadeInUp 0.8s;
-      margin-top: -60vh;
+      margin-top: -40vh;
 
       .texts {
         height: 90px;
@@ -262,7 +279,7 @@ section.main {
       }
       &:after {
         width: 0;
-        background-color: $highlight-color;
+        background-color: $main-color;
       }
       &:hover:after {
         width: calc(100% + 1px);
@@ -279,13 +296,13 @@ section.main {
       margin-top: 1px;
       height: 2px;
       color: #fff;
-      background-color: $highlight-color;
+      background-color: lighten($highlight-color, 30%);
       transform: translate(-50%, -50%);
       transition: width 400ms 400ms $ease, left 400ms 400ms $ease,
-        height 400ms 0ms $ease, top 400ms 0ms $ease;
+        height 400ms 0ms $ease, top 400ms 0ms $ease, background 0.5s;
       &.is-open {
         transition: width 400ms 0ms $ease, left 400ms 0ms $ease,
-          height 400ms 400ms $ease, top 400ms 400ms $ease;
+          height 400ms 400ms $ease, top 400ms 400ms $ease, background 0.5s;
         li {
           opacity: 1;
         }
@@ -354,6 +371,7 @@ section.main {
       opacity: 0;
       background-color: transparent;
       transform: rotate(-45deg);
+
       &:before,
       &:after {
         content: "";
@@ -407,7 +425,6 @@ section.dark {
   .header_links ul li .tooltip2,
   .header_links ul li .tooltip3 {
     color: #a0a0a0;
-    background: $black-background-color;
   }
 
   .container {
@@ -426,18 +443,19 @@ section.dark {
     }
 
     .modal-box {
+      transition: background 0.5s;
       background-color: $black-background-color;
     }
   }
 }
 @keyframes fadeInUp {
-  from {
-    transform: translate3d(0, 150px, 0);
+  0% {
     opacity: 0;
+    transform: translateY(20px);
   }
-  to {
-    transform: translate3d(0, 0, 0);
+  100% {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -452,19 +470,19 @@ section.dark {
 }
 @keyframes spin_words {
   10% {
-    transform: translateY(-112%);
+    transform: translateY(-110%);
   }
   25% {
     transform: translateY(-100%);
   }
   35% {
-    transform: translateY(-212%);
+    transform: translateY(-210%);
   }
   50% {
     transform: translateY(-200%);
   }
   60% {
-    transform: translateY(-312%);
+    transform: translateY(-310%);
   }
   100% {
     transform: translateY(-300%);
