--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,8 @@
+$black-background-color: #202020;
+$main-color: #fd5f5f;
+$ease: cubic-bezier(0.165, 0.84, 0.44, 1);
+$highlight-color: #505050;
+
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400,500,600,700|Poppins:300,400,800&display=swap");
 *,
 *::before,
@@ -33,13 +38,18 @@
   color: #fff;
 }
 
-body,
-html {
-  color: #2f2f2f;
-  overflow: hidden;
-  font-family: Poppins;
+:root {
+  --bs-gutter-x: 1.5rem;
+  --bs-gutter-y: 0;
 }
 
+body,
+html {
+  background: #fff;
+  color: #2f2f2f;
+  font-family: Poppins;
+  transition: background 0.5s;
+}
 section.navbar {
   transition: background 0.5s;
 }
@@ -99,25 +109,64 @@ header {
       text-align: center;
       justify-content: center;
       align-items: center;
-      border-radius: 6px;
       line-height: 35px;
       color: #2f2f2f;
-      background: #9e9e9e;
-      box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
       transition: all 0.5s ease;
       opacity: 0;
       pointer-events: none;
-    }
 
-    .header_links ul li:hover .tooltip1,
-    .header_links ul li:hover .tooltip2,
-    .header_links ul li:hover .tooltip3 {
-      transition: all 0.5s ease;
-      opacity: 1;
-      top: 7%;
+      &:before,
+      &:after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        height: 2px;
+        width: 0;
+        background-color: $main-color;
+        transition: 0.8s $ease;
+      }
     }
+  }
 
-    .toggle {
+  .header_links ul li:hover .tooltip1,
+  .header_links ul li:hover .tooltip2,
+  .header_links ul li:hover .tooltip3 {
+    transition: all 0.5s ease;
+    opacity: 1;
+    top: 6%;
+  }
+
+  .header_links ul li:hover .tooltip1::after,
+  .header_links ul li:hover .tooltip2::after,
+  .header_links ul li:hover .tooltip3::after {
+    left: 15%;
+    width: 70%;
+  }
+
+  .toggle {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 28px;
+    height: 28px;
+    border-radius: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-top: 15px;
+    margin-right: 30px;
+  }
+
+  .hamburger {
+    margin-top: 15px;
+    margin-left: 500px;
+    top: 20px;
+    right: 20px;
+    border-radius: 40%;
+
+    .openMenu {
       position: absolute;
       top: 20px;
       right: 20px;
@@ -129,14 +178,84 @@ header {
       align-items: center;
       cursor: pointer;
       margin-top: 15px;
-      margin-right: 30px;
+      margin-right: 0px;
+      font-size: 2rem;
+    }
+    .mainMenu {
+      display: none;
+      padding-top: 20px;
+      margin-top: 70px;
+      opacity: 0;
+      position: absolute;
+      list-style: none;
+      top: 0;
+      right: 50px;
+      left: 50px;
+      z-index: 10;
+      border-radius: 12px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background: #bbbbbb;
+      transition: top 1s ease;
+      li {
+        padding-bottom: 20px;
+        a {
+          display: inline-block;
+          text-decoration: none;
+          position: relative;
+          font-weight: 300;
+          text-decoration: none;
+          letter-spacing: 3px;
+          text-transform: uppercase;
+          color: #fff;
+          &:before,
+          &:after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 0;
+            height: 2px;
+            transition: width 400ms $ease;
+          }
+          &:after {
+            width: 0;
+            background-color: #fff;
+          }
+          &:hover:after {
+            width: 100%;
+          }
+        }
+
+        @for $i from 1 through 5 {
+          &.is-open li:nth-child(#{$i}) {
+            transition: all 500ms 500ms + (75ms * $i);
+          }
+        }
+      }
+    }
+
+    .closeMenu {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 28px;
+      height: 28px;
+      border-radius: 40%;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      margin-left: 10px;
+      margin-right: 0px;
+      font-size: 2rem;
+      color: #fff;
     }
   }
+}
 
-  .header_links ul li,
-  section.main ul li {
-    list-style-type: none;
-  }
+.header_links ul li,
+section.main ul li {
+  list-style-type: none;
 }
 
 section.main {
@@ -144,12 +263,14 @@ section.main {
 
   .container {
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
-
+    transition: background 0.5s;
+    border-bottom: solid 1px lighten(#2f2f2f, 50%);
     .box {
+      margin-top: 17vh;
       width: 250px;
       height: 250px;
       position: relative;
@@ -172,7 +293,7 @@ section.main {
           height: 95px;
           background: #fd5f5f;
           position: absolute;
-          animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
+          animation: mainBlock 1s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
           animation-delay: 0.8s;
           display: flex;
         }
@@ -181,7 +302,7 @@ section.main {
           color: #3f3f3f;
           font-size: 75px;
           animation: mainFadeIn 2s forwards;
-          animation-delay: 2.4s;
+          animation-delay: 1.4s;
           opacity: 0;
 
           span {
@@ -190,7 +311,7 @@ section.main {
             border-radius: 50%;
             animation: load 0.6s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
             animation: popIn 0.8s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
-            animation-delay: 2.8s;
+            animation-delay: 1.8s;
             margin-left: 5px;
             margin-top: -10px;
             position: absolute;
@@ -224,7 +345,7 @@ section.main {
           letter-spacing: 5px;
           animation: typewriter 2s steps(50) 1s normal both,
             blinkTextCursor 1s steps(50) infinite normal;
-          animation-delay: 2.8s;
+          animation-delay: 1.8s;
         }
       }
 
@@ -234,10 +355,302 @@ section.main {
         margin-top: 75px;
         display: flex;
         animation: fadeInUp 0.8s forwards;
-        animation-delay: 5s;
+        animation-delay: 4s;
         box-shadow: 0px 4px 4px #5f5f5f;
         border-bottom-left-radius: 6px;
         border-bottom-right-radius: 6px;
+      }
+    }
+  }
+}
+
+section.features {
+  padding: 100px 0;
+  color: #888888;
+  border-bottom: solid 1px lighten(#2f2f2f, 50%);
+  .container {
+    width: 80%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-top: calc(var(--bs-gutter-y) * -1);
+      margin-right: calc(var(--bs-gutter-x) / -2);
+      margin-left: calc(var(--bs-gutter-x) / -2);
+      .title {
+        text-align: center;
+        position: relative;
+        z-index: 5;
+        h3 {
+          font-size: 15px;
+          font-weight: 600;
+          display: block;
+          margin-bottom: 8px;
+          font-family: sans-serif;
+          text-transform: uppercase;
+          color: $main-color;
+        }
+        h2 {
+          margin-bottom: 25px;
+          line-height: 42px;
+          text-transform: capitalize;
+          position: relative;
+          font-weight: 800;
+          color: #2f2f2f;
+        }
+      }
+    }
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-right: calc(var(--bs-gutter-x) / -2);
+      margin-left: calc(var(--bs-gutter-x) / -2);
+
+      .feature-box {
+        flex: 0 0 auto;
+
+        .single-feature {
+          min-height: 300px;
+          text-align: left;
+          padding: 35px;
+          background-color: #cccccc;
+          border-radius: 6px;
+          position: relative;
+          margin-top: 30px;
+          border: 1px solid #8f8f8f;
+          transition: all 0.35s ease-out 0s;
+
+          &:hover {
+            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.09);
+            transform: translateY(-5px);
+          }
+
+          i {
+            height: 60px;
+            width: 60px;
+            line-height: 60px;
+            text-align: center;
+            display: inline-block;
+            background-color: $main-color;
+            color: #fff;
+            font-size: 20px;
+            border-radius: 7px;
+            box-shadow: 0 4px 6px #0000002a;
+            margin-bottom: 30px;
+          }
+          h3 {
+            color: darken(#bbbbbb, 70%);
+            display: block;
+            font-size: 18px;
+            font-weight: 500;
+            margin-bottom: 20px;
+            line-height: 1.2;
+          }
+
+          p {
+            line-height: 22px;
+            margin: 0;
+            padding: 0;
+            font-size: 15px;
+            display: block;
+            color: lighten(#2f2f2f, 10%);
+            span,
+            a {
+              text-decoration: none;
+              color: #0d6efd;
+              transition: all 0.4s ease;
+
+              &:hover {
+                color: darken(#0a58ca, 20%);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+.row > * {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  padding-right: calc(var(--bs-gutter-x) / 2);
+  padding-left: calc(var(--bs-gutter-x) / 2);
+  margin-top: var(--bs-gutter-y);
+}
+
+section.faq {
+  padding-top: 100px;
+  padding-bottom: 80px;
+  position: relative;
+
+  .container {
+    height: 500px;
+    width: 80%;
+    padding-right: var(--bs-gutter-x, 0.75rem);
+    padding-left: var(--bs-gutter-x, 0.75rem);
+    margin-right: auto;
+    margin-left: auto;
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: calc(var(--bs-gutter-y) * -1);
+      margin-right: calc(var(--bs-gutter-x) / -2);
+      margin-left: calc(var(--bs-gutter-x) / -2);
+
+      .title {
+        text-align: center;
+        padding: 0 300px;
+        position: relative;
+        z-index: 5;
+        h3 {
+          font-size: 15px;
+          font-weight: 600;
+          display: block;
+          margin-bottom: 8px;
+          font-family: sans-serif;
+          text-transform: uppercase;
+          color: $main-color;
+        }
+        h2 {
+          font-size: 34px;
+          margin-bottom: 25px;
+          line-height: 42px;
+          text-transform: capitalize;
+          position: relative;
+          font-weight: 800;
+          color: #2f2f2f;
+        }
+
+        p {
+          font-size: 15px;
+          line-height: 24px;
+          margin-bottom: 50px;
+        }
+      }
+    }
+
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-top: calc(var(--bs-gutter-y) * -1);
+      margin-right: calc(var(--bs-gutter-x) / -2);
+      margin-left: calc(var(--bs-gutter-x) / -2);
+
+      .accordion {
+        .accordion-item {
+          margin: 0px 250px;
+          margin-bottom: 20px;
+
+          .accordion-button {
+            background-color: #cccccc;
+            position: relative;
+            align-items: center;
+            text-align: left;
+            overflow-anchor: none;
+            cursor: pointer;
+            border-radius: 8px;
+            font-size: 17px;
+            font-weight: 500;
+            width: 100%;
+            display: block;
+            overflow: hidden;
+            border: 1px solid #454545;
+            padding: 20px;
+            transition: color 0.15s ease-in-out,
+              background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+              box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+
+            &:not(.collapse) {
+              color: #fff;
+              background-color: $main-color;
+              border-color: transparent;
+              border-radius: 8px 8px 0 0;
+
+              .title {
+                color: #fff;
+                transition: all 0.4s ease;
+                .number {
+                  background: #fff;
+                  color: #2f2f2f;
+                  transition: all 0.4s ease;
+                }
+
+                i:after {
+                  content: "";
+                }
+                i:before {
+                  content: "\f068";
+                }
+              }
+            }
+
+            .title {
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+              font-size: 15px;
+              position: relative;
+              font-weight: 600;
+              padding-left: 45px;
+              line-height: 25px;
+              color: lighten(#2f2f2f, 10%);
+
+              .number {
+                color: $main-color;
+                background: #fff;
+                height: 30px;
+                width: 30px;
+                line-height: 28px;
+                text-align: center;
+                border-radius: 50%;
+                border: 1px solid #454545;
+                font-size: 14px;
+                position: absolute;
+                left: 0;
+                top: 50%;
+                transform: translateY(-50%);
+              }
+
+              i {
+                margin-right: -310px;
+              }
+            }
+          }
+
+          .accordion-collapse {
+            border: none;
+            height: 0;
+            overflow: hidden;
+            transition: height 0.35s ease;
+            .accordion-body {
+              background-color: #cccccc;
+              width: 100%;
+              border-radius: 0 0 8px 8px;
+              padding: 40px;
+              border-left: 1px solid #454545;
+              border-right: 1px solid #454545;
+              border-bottom: 1px solid #454545;
+              p {
+                margin: 0;
+                padding: 0;
+                color: #2f2f2f;
+                font-size: 15px;
+                font-weight: 500;
+                line-height: 24px;
+              }
+            }
+          }
+        }
       }
     }
   }
@@ -248,6 +661,32 @@ section.dark {
   color: #a0a0a0;
   transition: background 0.5s;
 
+  .container {
+    .row {
+      .accordion {
+        .accordion-item {
+          .accordion-button {
+            background-color: rgba(253, 95, 95, 0.06);
+            .title {
+              color: #bbbbbb;
+              .number {
+                background: #2f2f2f;
+              }
+            }
+          }
+
+          .accordion-collapse {
+            .accordion-body {
+              background-color: rgba(253, 95, 95, 0.06);
+              p {
+                color: #bbbbbb;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
   .header_links {
     .nav_links {
       .nav_link {
@@ -266,7 +705,6 @@ section.dark {
   .header_links ul li .tooltip2,
   .header_links ul li .tooltip3 {
     color: #a0a0a0;
-    background: #202020;
   }
 
   .container {
@@ -287,14 +725,107 @@ section.dark {
       }
     }
   }
-}
-@keyframes fadeInUp {
-  from {
-    transform: translate3d(0, 150px, 0);
+
+  .container {
+    .row {
+      .title {
+        h2 {
+          color: #fff;
+        }
+      }
+    }
+
+    .row {
+      .feature-box {
+        .single-feature {
+          background-color: darken(#2f2f2f, 5%);
+          border: 1px solid #454545;
+          h3 {
+            color: lighten(#a0a0a0, 25%);
+          }
+          p {
+            color: #a0a0a0;
+          }
+        }
+      }
+    }
   }
-  to {
-    transform: translate3d(0, 0, 0);
+}
+
+@media only screen and (max-width: 900px) {
+  header {
+    nav {
+      .header_links {
+        display: none;
+      }
+
+      .toggle {
+        margin-right: 50px;
+      }
+    }
+  }
+
+  section.features {
+    height: 2300px;
+
+    .container {
+      .row {
+        .title {
+          h2 {
+            font-size: 28px;
+          }
+        }
+      }
+
+      .row {
+        .feature-box {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  header {
+    nav {
+      .hamburger {
+        display: none;
+      }
+    }
+  }
+
+  section.features {
+    height: 1000px;
+
+    .container {
+      .row {
+        .title {
+          padding: 0 300px;
+
+          h2 {
+            font-size: 34px;
+          }
+        }
+      }
+
+      .row {
+        .feature-box {
+          width: 33.3333333333%;
+        }
+      }
+    }
+  }
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
     opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -390,6 +921,16 @@ section.dark {
     opacity: 0;
   }
   100% {
+    opacity: 1;
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  50% {
     opacity: 1;
   }
 }
