--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,9 @@ header nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+
+header nav .header_links {
   -webkit-animation: fadeInDown 0.8s;
           animation: fadeInDown 0.8s;
 }
@@ -191,6 +194,11 @@ header .toggle {
   cursor: pointer;
   margin-top: 15px;
   margin-right: 30px;
+  -webkit-animation: opacity 2s;
+          animation: opacity 2s;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
+  opacity: 1;
 }
 
 header .hamburger {
@@ -204,7 +212,7 @@ header .hamburger {
 header .hamburger .openMenu {
   position: absolute;
   top: 20px;
-  right: 20px;
+  right: -70px;
   width: 28px;
   height: 28px;
   border-radius: 40%;
@@ -452,7 +460,7 @@ section.main .container .box .role {
 section.main .container .box .role p {
   border-right: 2px solid #00000000;
   white-space: nowrap;
-  line-height: 35px;
+  line-height: 25px;
   margin-left: 0px;
   position: relative;
   overflow: hidden;
@@ -463,8 +471,6 @@ section.main .container .box .role p {
   font-size: 12px;
   text-transform: uppercase;
   letter-spacing: 5px;
-  -webkit-animation: typewriter 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
-          animation: typewriter 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
   -webkit-animation-delay: 1.8s;
           animation-delay: 1.8s;
 }
@@ -914,10 +920,28 @@ section.dark .container .row .feature-box .single-feature p {
     display: none;
   }
   header nav .toggle {
-    margin-right: 50px;
+    margin-right: -55px;
+  }
+  section.main {
+    width: 100%;
+  }
+  section.main .container .title {
+    margin-left: 50px;
+  }
+  section.main .container .box .role p {
+    margin-left: 112.5px;
+    -webkit-animation: typewriterMobile 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
+            animation: typewriterMobile 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
+    -webkit-animation-delay: 1.8s;
+            animation-delay: 1.8s;
+    font-size: 10px;
+  }
+  section.main .container .box .image img {
+    height: 70%;
+    margin-left: 0px;
   }
   section.features {
-    height: 2300px;
+    height: 2350px;
   }
   section.features .container .row .title h2 {
     font-size: 28px;
@@ -930,6 +954,12 @@ section.dark .container .row .feature-box .single-feature p {
 @media only screen and (min-width: 900px) {
   header nav .hamburger {
     display: none;
+  }
+  section.main .container .box .role p {
+    -webkit-animation: typewriter 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
+            animation: typewriter 2s steps(50) 1s normal both, blinkTextCursor 1s steps(50) infinite normal;
+    -webkit-animation-delay: 1.8s;
+            animation-delay: 1.8s;
   }
   section.features {
     height: 1000px;
@@ -973,24 +1003,44 @@ section.dark .container .row .feature-box .single-feature p {
 
 @-webkit-keyframes fadeInDown {
   from {
-    -webkit-transform: translate3d(0, -150px, 0);
-            transform: translate3d(0, -150px, 0);
+    opacity: 0;
+    -webkit-transform: translateY(-150px);
+            transform: translateY(-150px);
   }
   to {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
     opacity: 1;
   }
 }
 
 @keyframes fadeInDown {
   from {
-    -webkit-transform: translate3d(0, -150px, 0);
-            transform: translate3d(0, -150px, 0);
+    opacity: 0;
+    -webkit-transform: translateY(-150px);
+            transform: translateY(-150px);
   }
   to {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes opacity {
+  from {
+    opacity: 0;
+  }
+  to {
     opacity: 1;
   }
 }
@@ -1128,6 +1178,24 @@ section.dark .container .row .feature-box .single-feature p {
   }
   to {
     width: 32.8em;
+  }
+}
+
+@-webkit-keyframes typewriterMobile {
+  from {
+    width: 0;
+  }
+  to {
+    width: 35.8em;
+  }
+}
+
+@keyframes typewriterMobile {
+  from {
+    width: 0;
+  }
+  to {
+    width: 35.8em;
   }
 }
 
